[package]
name = "yozuk-skill-time"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.19", features = ["unstable-locales"] }
clap = { version = "3.1.6", features = ["derive"] }
mediatype = "0.19.1"
yozuk-helper-english = { path = "../../helpers/english" }
yozuk-sdk = { path = "../../yozuk-sdk" }
